Styled it a bit more. Further changes will happen

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     </header>
     <section id='search_box'>
       <form name='search_artwork'>
-        <label for='artist_name'>Artist Name</label>
         <input id='artist_name' type='text'>
       </form>
-      <a href='javascript:performSearch()'>Search</a>
+      <a href='javascript:performSearch()' id='search_button'>Search</a>
       <!-- search box here -->
     </section>
     <section id='main_body'>
