Fixed a bug that breaks the layout
If the artist name is very long, the layout breaks. Will do the same to the album title

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       Grab 'em
     </header>
     <section id='search_box'>
-      <form name='search_artwork'>
-        <input id='artist_name' type='text'>
+      <form action='javascript:performSearch()' name='search_artwork'>
+        <input id='artist_name' placeholder='enter search term' type='text'>
       </form>
       <a href='javascript:performSearch()' id='search_button'>Search</a>
       <!-- search box here -->
