Starting to implement animations for the albumart

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!-- search results here -->
     </section>
     <script id='template' type='x-tmpl-mustache'>
-      <div class='result_item'>
+      <div class='result_item' id='info_{{ itemNo }}'>
         <div class='album_art'>
           <img alt='{{ collectionName }}' src='{{ artworkUrl100 }}'>
         </div>
