Just some modifications lol

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script id='template' type='x-tmpl-mustache'>
       <div class='result_item' id='info_{{ itemNo }}'>
         <div class='album_art'>
-          <img alt='{{ collectionName }}' src='{{ artworkUrl100 }}'>
+          <img alt='{{ collectionName }}' height='100' src='{{ artworkUrl100 }}' width='100'>
         </div>
         <div class='album_info'>
           <h2>
