Added option to get the original size if it exists

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           <a class='album_art_button small' href='{{ artworkURLClean }}400x400-75.jpg' target='new'></a>
           <a class='album_art_button medium' href='{{ artworkURLClean }}600x600-75.jpg' target='new'></a>
           <a class='album_art_button large' href='{{ artworkURLClean }}1200x1200-75.jpg' target='new'></a>
+          {{#originalArt}}
+          <a class='album_art_button orig' href='{{ artworkURLClean }}jpg' target='new'></a>
+          {{/originalArt}}
         </div>
       </div>
     </script>
