--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <title>Grab 'em</title>
     <meta content='initial-scale=1.0, user-scalable=no, width=device-width' name='viewport'>
-    <link href='css/normalize.css' rel='stylesheet'>
+    <link href='css/normalize.min.css' rel='stylesheet'>
     <link href='css/style.css' rel='stylesheet'>
+    <link href='css/animate.min.css' rel='stylesheet'>
   </head>
   <body>
     <header>
       <!-- this is where we put the header bar -->
       Grab 'em
     </header>
-    <section id='search_box'>
+    <section class='animated fadeInDown' id='search_box'>
       <form action='javascript:performSearch()' name='search_artwork'>
         <input id='artist_name' placeholder='enter search term' type='text'>
       </form>
@@ -24,7 +25,7 @@
     <script id='template' type='x-tmpl-mustache'>
       <div class='result_item' id='info_{{ itemNo }}'>
         <div class='album_art'>
-          <img alt='{{ collectionName }}' height='100' src='{{ artworkUrl100 }}' width='100'>
+          <img alt='{{ collectionName }}' data-src-retina='{{ artworkUrl200}}' height='100' src='{{ artworkUrl100 }}' width='100'>
         </div>
         <div class='album_info'>
           <h2>
