Removed jQuery.unveil

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script id='template' type='x-tmpl-mustache'>
       <div class='result_item' id='info_{{ itemNo }}'>
         <div class='album_art'>
-          <img alt='{{ collectionName }}' data-src-retina='{{ artworkUrl200}}' height='100' src='{{ artworkUrl100 }}' width='100'>
+          <img alt='{{ collectionName }}' height='100' src='{{ artworkUrl200 }}' width='100'>
         </div>
         <div class='album_info'>
           <h2>
