Layout of results overhauled

--- a/index.html
+++ b/index.html
@@ -25,19 +25,21 @@
     <script id='template' type='x-tmpl-mustache'>
       <div class='result_item' id='info_{{ itemNo }}'>
         <div class='album_art'>
-          <img alt='{{ collectionName }}' height='100' src='{{ artworkUrl200 }}' width='100'>
+          <img alt='{{ collectionName }}' class='artwork_img' height='100%' src='{{ artworkUrl200 }}' width='100%'>
         </div>
         <div class='album_info'>
-          <h2>
-            {{ collectionName }}
-          </h2>
-          <h3>
-            {{ artistName }}
-          </h3>
+          <div class='inner_info'>
+            <h2>
+              {{ collectionName }}
+            </h2>
+            <h3>
+              {{ artistName }}
+            </h3>
+          </div>
         </div>
+        <div class='fade'></div>
         <div class='size_buttons_container'>
           <div class='size_buttons'>
-            Album art size:
             <a class='album_art_button small' href='{{ artworkURLClean }}400x400-75.jpg' target='new'></a>
             <a class='album_art_button medium' href='{{ artworkURLClean }}600x600-75.jpg' target='new'></a>
             <a class='album_art_button large' href='{{ artworkURLClean }}1200x1200-75.jpg' target='new'></a>
