Added Grunt task for minifying bundle.js

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </script>
   </body>
   <footer>
-    <script src='js/bundle.js'></script>
+    <script src='js/bundle.min.js'></script>
     <div id='search_script'></div>
   </footer>
 </html>
