Replaced search button with an icon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <section class='animated fadeInDown' id='search_box'>
       <form action='javascript:performSearch()' id='search_form' name='search_artwork'>
         <input autofocus='true' id='search_term' placeholder='enter search term' type='text'>
-        <a href='javascript:performSearch()' id='search_button'>search</a>
+        <a href='javascript:performSearch()' id='search_button'>
+          <img alt='SEARCH' src='css/search.svg' width='25px'>
+        </a>
       </form>
     </section>
     <section id='main_body'></section>
